# strata-memory

./: .gitignore  AGENTS.md  CONTRIBUTING.md  MANIFESTO.md  README.md  debug2.py  debug3.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
contrib/: strata.service
docs/: architecture.md  cli-reference.md  configuration.md  how_to_make_pi_extension.md  index.md  installation.md  philosophy-mapping.md  pi-integration.md  search.md  strata_blog_post.md  tracking.md
docs/brainstorms/: pi-knowledge-capture-and-distill.md
docs/plans/: 2026-06-17-001-feat-pi-knowledge-capture-distill-plan.md
landing_page/: DESIGN.md  PRODUCT.md  astro.config.mjs  index.html  package-lock.json  package.json
landing_page/src/components/: Button.astro  CLIWalkthrough.astro  Footer.astro  Hero.astro  MailingListCTA.astro  Navbar.astro  StrataSection.astro  Terminal.astro
landing_page/src/layouts/: DocsLayout.astro
landing_page/src/pages/: index.astro
landing_page/src/pages/docs/: [...slug].astro  index.astro
landing_page/src/styles/: global.css
skills/pi/: strata.ts
skills/strata/: SKILL.md
strata/: __init__.py  _cli_main.py  cli.py  config.py  daemon.py  distiller.py  janitor.py  mcp_server.py  models.py  qmd_setup.py  query.py  storage.py  tools.py  tracking.py
strata/cli/: __init__.py  _config.py  _json.py  _spinner.py  help.py  registry.py
strata/cli/commands/: __init__.py  add.py  config_cmd.py  cost.py  distiller.py  forget.py  history.py  index_cmd.py  init.py  install_service.py  lifecycle.py  list_cmd.py  mcp_cmd.py  pi_install.py  qmd.py  read.py  rehydrate.py  search.py  serve.py  skill.py  status.py  stop.py  uninstall_service.py
strata/skills/pi/: strata.ts
strata/skills/strata/: SKILL.md
strata_data/active/: index.md
tests/: conftest.py  test_cli.py  test_config.py  test_daemon.py  test_distiller.py  test_integration.py  test_janitor.py  test_mcp.py  test_qmd_setup.py  test_query.py  test_stratum1.py  test_stratum2.py  test_stratum3.py  test_tracking.py
